<resources>
    <string name="app_name">Ham Radio Practice Game</string>
    <string name="about_page">An app to practice Morse code comprehension under various conditions.
        \n\nDeveloped by:\nMaegan Patterson\nGenesis Sarmiento\nDanny Tenorio\nThomas Ayele
        \n\nAdvised by:\nDr. Forrest Stonedahl
        \n\nStatic sound from <a href="https://www.zapsplat.com">https://www.zapsplat.com</a></string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">General</string>
    <string name="sync_header">Sync</string>

    <!-- General Preferences -->
    <string name="signature_title">Your CallSign</string>
    <string name="static_title">Static?</string>
    <string name="CW_title">CW Speed(wpm)</string>
    <string name="time_title">Time(minutes)</string>
    <string name="play">PLAY</string>
    <string name="start_button">Start</string>
    <string name="freq_edit">Frequency</string>
</resources>
