<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/messages_header">

        <EditTextPreference
            android:defaultValue ="false"
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="20"
            android:key="WPM"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/CW_title"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            android:defaultValue="5"
            android:key="edit_text_preference_2"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/time_title"
            app:useSimpleSummaryProvider="true"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_preference_1"
            android:title="@string/static_title"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            android:defaultValue="200"
            android:key="frequency"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/freq_edit"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>
